# simple_logging_config

./: .gitignore  404.html  codecov.yml  config.toml  index.html  mkdocs.yml  pyproject.toml  readme.md  release.bat
.github/workflows/: build.yml  docs.yml  release.yml
api/examples/: index.html
api/reference/: index.html
argparse/: index.html
changelog/: index.html
custom_levels/: index.html
design/: index.html
docs/: argparse.md  argparse_arguments.md  custom_levels.md  design.md  env_variables.md  license.md  usage.md
docs/api/: api.md  examples.md  reference.md
env_variables/: index.html
license/: index.html
search/: search_index.json
src/simple_logging_config/: __init__.py  _add_logging_arguments.py  _add_logging_level.py  _configure.py  _defaults.py  _exceptions.py  _file.py  _filters.py  _formatters.py  _level.py  _logging_config.py  _simple_logging_config.py  _singleton.py  _version.py  add_logging_arguments.py  add_logging_level.py  defaults.py  simple_logging_config.py  version.py
src/simple_logging_config/resources/: configs.yaml  default.yaml.jinja  formatters.yaml  handlers.yaml
tests/: conftest.py  test_arguments.py  test_config.py  test_default_config.py  test_file.py  test_filters.py  test_formatters.py  test_levels.py  test_named_configs.py  test_print.py  test_version.py
usage/: index.html
