[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "simple-logging-config"
authors = [
    {name = "srfoster65", email = "135555068+srfoster65@users.noreply.github.com"},
]
description = "Simple Logging Config"
keywords = ["logging"]
readme = "readme.md"
requires-python =">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    "arg-init>=0.0.3",
]
license = {text = "MIT"}
dynamic = ["version"]

[project.urls]
Documentation = "https://srfoster65.github.io/simple_logging_config/"
Source = "https://github.com/srfoster65/simple_logging_config"


[tool.pdm.backend.hooks.base]
target = "wheel"

[tool.pdm.version]
source = "file"
path = "src/simple_logging_config/_version.py"

[tool.pdm.dev-dependencies]
lint = [
    "black"
]
test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.6",
]


[tool.pylint.basic]
good-names = [
    "go",
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint."massages-control"]
disable = []


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src"
testpaths = [
    "tests",
]
