[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "simple-logging-config"
authors = [
    {name = "srfoster65", email = "135555068+srfoster65@users.noreply.github.com"},
]
description = "Simple Logging Config"
keywords = ["logging"]
readme = "readme.md"
requires-python =">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyyaml>=6.0.1",
    "jinja2>=3.1.2",
    "arg-init>=0.0.6",
]
license = {text = "MIT"}
dynamic = ["version"]

[project.urls]
Documentation = "https://srfoster65.github.io/simple_logging_config/"
Source = "https://github.com/srfoster65/simple_logging_config"


[tool.pdm.backend.hooks.base]
target = "wheel"

[tool.pdm.version]
source = "file"
path = "src/simple_logging_config/_version.py"

[tool.pdm.dev-dependencies]
lint = [
    "black"
]
test = [
    "pytest>=7.4.2",
    "pytest-cov>=4.1.0",
    "pyfakefs>=5.3.0",
    "mypy>=1.7.0",
    "pydantic>=2.5.0",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.6",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=src"
testpaths = [
    "tests",
]


[tool.mypy]
plugins = [
  "pydantic.mypy"
]
files = "src/simple_logging_config/"

follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

show-error-content = true
